develop: fix upload ilustration not showing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.2 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -167,6 +167,8 @@ optgroup,
 select,
 textarea {
   font-family: inherit; /* 1 */
+  font-feature-settings: inherit; /* 1 */
+  font-variation-settings: inherit; /* 1 */
   font-size: 100%; /* 1 */
   font-weight: inherit; /* 1 */
   line-height: inherit; /* 1 */
@@ -301,6 +303,13 @@ ul,
 menu {
   list-style: none;
   margin: 0;
+  padding: 0;
+}
+
+/*
+Reset default styling for dialogs.
+*/
+dialog {
   padding: 0;
 }
 
@@ -565,6 +574,9 @@ video {
 .right-20 {
   right: 5rem;
 }
+.right-52 {
+  right: 13rem;
+}
 .right-60 {
   right: 15rem;
 }
@@ -802,6 +814,9 @@ video {
 }
 .w-80 {
   width: 20rem;
+}
+.w-\[40rem\] {
+  width: 40rem;
 }
 .w-\[50rem\] {
   width: 50rem;
@@ -2805,6 +2820,10 @@ input:checked ~ .line {
 
   .lg\:right-20 {
     right: 5rem;
+  }
+
+  .lg\:right-60 {
+    right: 15rem;
   }
 
   .lg\:mt-0 {
